<resources>
    <string name="app_name">WorkFinder</string>
    <string name="action_settings">Settings</string>

    <string name="subtitle">Subtitle</string>
    <string name="title">Title</string>
    <string name="action1">Action 1</string>
    <string name="action2">Action 2</string>
    <string name="title_activity_matchning">MatchningActivity</string>
    <string name="preset">Preset</string>
    <string name="favorites">Favoriter</string>
    <string name="search">Sök</string>
    <string name="profile">Profil</string>
    <string name="yrke_tip">Jag söker</string>
    <string name="lan_tip">Län</string>
    <string name="kommun_tip">Kommun</string>
    <string name="anstallningstyp_tip">Anställningstyp</string>
    <string name="search_view_hint">Sök yrke, företag&#8230;</string>

    <string-array name="lan_array">
        <item>Alla</item>
        <item>Stockholm</item>
        <item>Uppsala</item>
        <item>Södermanland</item>
        <item>Östergötland</item>
    </string-array>
    <string-array name="stockholm_array">
        <item>Alla</item>
        <item>Botkyrka</item>
        <item>Danderyd</item>
        <item>Ekerö</item>
        <item>Haninge</item>
        <item>Huddinge</item>
        <item>Järfälla</item>
        <item>Lidingö</item>
        <item>Nacka</item>
    </string-array>
    <string-array name="uppsala_array">
        <item>Alla</item>
        <item>Enköping</item>
        <item>Heby</item>
        <item>Håbo</item>
        <item>Knivsta</item>
        <item>Tierp</item>
        <item>Uppsala</item>
        <item>Älvkarleby</item>
        <item>Östhammar</item>
    </string-array>
    <string-array name="sodermanland_array">
        <item>Alla</item>
        <item>Eskilstuna</item>
        <item>Flen</item>
        <item>Gnesta</item>
        <item>Katrineholm</item>
        <item>Nyköping</item>
        <item>Oxelösund</item>
        <item>Strängnäs</item>
        <item>Trosa</item>
        <item>Vingåker</item>
    </string-array>
    <string-array name="ostergotland_array">
        <item>Alla</item>
        <item>Boxholm</item>
        <item>Finspång</item>
        <item>Kinda</item>
        <item>Linköping</item>
        <item>Mjölby</item>
        <item>Motala</item>
        <item>Norrköping</item>
        <item>Söderköping</item>
        <item>Vadstena</item>
        <item>Valdemarsvik</item>
        <item>Ydre</item>
        <item>Åtvidaberg</item>
        <item>Ödeshög</item>
    </string-array>
    <string-array name="anstallningstyp_array">
        <item>Alla</item>
        <item>Tillsvidare</item>
        <item>Sommar/Feriejobb</item>
        <item>Utlandsjobb</item>
    </string-array>
    <string-array name="alla_array">
        <item>Alla</item>
    </string-array>
    <string name="title_activity_inloggning">Logga in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="email">Epost</string>
    <string name="password">Lösenord</string>
    <string name="sign_in_with_email">Logga in med epost</string>
    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Logga in</string>
    <string name="create_account">Skapa konto</string>
    <string name="sign_out">Logga ut</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Laddar…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Epost</string>
    <string name="hint_password">Lösenord</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
</resources>
