<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    android:focusableInTouchMode="true">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:text="@string/app_name"
        android:gravity="center"
        android:textSize="40sp"
        android:textColor="@color/colorPrimary"/>

    <EditText
        android:id="@+id/field_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorPrimaryDark"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/field_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorPrimaryDark"
        android:hint="@string/hint_password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/email_sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/sign_in"
        android:layout_weight="1"
        android:background="@color/colorAccent"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/email_create_account_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="100dp"
        android:text="@string/create_account"
        android:layout_weight="1"
        android:background="@color/colorAccent"
        android:textAllCaps="false"/>

</LinearLayout>