<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profil"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.workfinder.workfinder.ProfilActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:focusableInTouchMode="true"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/tip_marginBottom"
            android:text="@string/yrke_tip"/>
        <EditText
            android:id="@+id/edit_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spinner_height"
            android:layout_marginTop="@dimen/tip_marginBottom"
            android:inputType="text"
            android:maxLines="1"
            android:imeOptions="actionDone"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tip_marginTop"
            android:layout_marginBottom="@dimen/tip_marginBottom"
            android:text="@string/lan_tip"/>
        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spinner_height"
            android:layout_marginTop="@dimen/tip_marginBottom"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tip_marginTop"
            android:layout_marginBottom="@dimen/tip_marginBottom"
            android:text="@string/kommun_tip"/>
        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spinner_height"
            android:layout_marginTop="@dimen/tip_marginBottom"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tip_marginTop"
            android:layout_marginBottom="@dimen/tip_marginBottom"
            android:text="@string/anstallningstyp_tip"/>
        <Spinner
            android:id="@+id/spinner3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spinner_height"
            android:layout_marginTop="@dimen/tip_marginBottom"/>
        <Button
            android:id="@+id/sign_out_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sign_out_btn_marginTop"
            android:background="@color/red"
            android:text="@string/sign_out"
            android:textAllCaps="false"/>
    </LinearLayout>
</ScrollView>
